--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -111,7 +111,11 @@ Get a summary of the collection of data affirmations in a gt table with `affirm_
 The table includes 
 
 ```{r}
-affirm_report_gt()
+affirm_report_gt() |> 
+  gt::opt_interactive(
+    use_filters = TRUE,
+    use_search = TRUE
+  )
 ```
 
 
